--- a/agent/package.json
+++ b/agent/package.json
@@ -71,5 +71,8 @@
         "ts-jest": "^29.2.5",
         "ts-node": "10.9.2",
         "tsup": "8.3.5"
+    },
+    "engines": {
+        "node": ">=23.3.0"
     }
 }
